# confluence_chunker

./: .bumpversion.cfg  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  docker-compose-opensearch.yml  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
confluence_chunker/: __init__.py  __main__.py  config.py  confluence_chunker.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: __init__.py  test_confluence_chunker.py
