[tool]
[tool.poetry]
name = "confluence_chunker"
version = "0.1.0"
homepage = "https://github.com/glenacota/confluence_chunker"
description = "A tool to create chunks of text out of a Confluence page."
authors = ["Guido Lena Cota <guido.lenacota@gmail.com>"]
readme = "README.md"
license =  "Apache-2.0"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "confluence_chunker" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4"
atlassian-python-api = ">=3.41"
python-decouple = ">=3.8"
langchain = ">=0.1.0"
lxml = ">=5.0"
click = ">=8.1"
markdownify = ">= 0.11"
opensearch-py = ">=2.4"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"

sphinx = ">=5.3.0"
black = "*"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
